# pookiepresale

./: .env.example  .gitignore  DEPLOY-PROGRAM-INSTRUCTIONS.md  NFT-STAKING-README.md  PRESALE-TOOLS-README-FINAL.md  PRESALE-TOOLS-README.md  PRODUCTION_CHECKLIST.md  README.md  all_incoming_txs.json  contributions.json  contributions_simple.json  examine_all_txs.py  fetch_all_txs.py  get_all_txn_data.py  get_sol_transfers.py  h origin master  init-staking.js  middleware.ts  next.config.mjs  on vercel.json  package-lock.json  package.json  pookie-nft-staking-keypair.json  requirements.txt  signatures.json  sol_transfers.json  tailwind.config.ts  test-delete-me.txt  txns.json  vercel.json
app/: globals.css  layout.tsx  page.tsx  page.tsx.backup
components/: animated-background.tsx  client-providers.tsx  contribution-form.tsx  custom-cursor.tsx  debug-helper.tsx  fireworks-effect.tsx  global-sound-provider.tsx  icons.tsx  mobile-footer.tsx  mobile-presale-form.tsx  model-viewer.tsx  music-player.tsx  nft-staking.tsx  on-chain-nft-staking.tsx  password-gate.tsx  pookie-explosion.tsx  pookie-model-mobile.tsx  pookie-scene.tsx  social-links.tsx  staking-scene.tsx  token-staking.tsx  wallet-provider-core.tsx  wallet-provider.tsx  wallet-transaction-handler.tsx  y2k-gallery.tsx
docs/: SUPABASE_SETUP.md
hooks/: use-audio.ts  use-sound.tsx
lib/: rpc-patch.ts  solana-connection-patch.ts  solana.ts  transactions.ts
pages/: _app.tsx
programs/pookie-nft-staking/: Cargo.toml  README.md  program-keypair.json
programs/pookie-nft-staking/src/: instruction.rs  lib.rs
(+102 files in other folders)
