[package]
name = "pookie-nft-staking"
version = "0.1.0"
edition = "2021"
description = "Pookie NFT Staking Program"
authors = ["Pookie Team"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.16.0"
thiserror = "1.0.40"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
arrayref = "0.3.8"

[dev-dependencies]
solana-program-test = "=1.16.0"
solana-sdk = "=1.16.0"

[lib]
crate-type = ["cdylib", "lib"] 